# usbboot1

./: .gitignore  pyproject.toml
crates/rpiboot_rs_cli/: Cargo.toml
crates/rpiboot_rs_lib/: Cargo.toml
crates/rpiboot_rs_lib/src/: bootfiles.rs  bootfiles_tarcrate.rs  duid.rs  embedded.rs  file_server.rs  lib.rs  metadata.rs  usb.rs
